# Rephraser

./: .gitignore  LICENSE  Package.swift  README.md  appcast.xml  project.yml
.github/workflows/: windows-build.yml  windows-poc.yml
Rephraser/: AppState.swift  Info.plist  RephraserApp.swift
Rephraser.xcodeproj/: project.pbxproj
Rephraser/Coordinator/: RephraseCoordinator.swift
Rephraser/Models/: AppError.swift  LocalModel.swift  RephraseMode.swift  RephraseResult.swift
Rephraser/Services/: ClipboardSnapshot.swift  HotkeyService.swift  ModelManager.swift  RephraseService.swift  SourceAppTracker.swift  TextCaptureService.swift
Rephraser/Utilities/: AccessibilityHelper.swift  Analytics.swift  CGEventHelpers.swift  RetryHelper.swift
Rephraser/Views/: MenuBarView.swift  OnboardingView.swift  RephrasePanel.swift  RephrasePanelContent.swift  SettingsView.swift
Rephraser/Views/Components/: StreamingTextView.swift
docs/: PRD.md  PRODUCT_GUIDEBOOK.md  index.html  privacy.html  robots.txt  sitemap.xml  windows.html
docs/blog/: grammarly-alternative-offline.html
docs/windows/: latest.json
marketing/: README.md
marketing/email/: journalist_outreach.md
marketing/hackernews/: show_hn.md
marketing/longform/: devto_technical.md  indiehackers_journey.md
marketing/producthunt/: launch_kit.md
marketing/reddit/: r_localllama.md  r_macapps.md  r_opensource.md  r_privacy.md  r_productivity.md  r_sideproject.md  r_windows11.md
marketing/social/: linkedin_post.md  twitter_thread.md
marketing/video/: demo_script.md
qa-cli/: RephraseMode.swift  main.swift
shared/models/: catalog.json
shared/prompts/: modes.json
website/: index.html
windows/: DECISIONS.md  NOTICE.md  README.md
windows/app/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
windows/app/src/: App.tsx  DiffView.tsx  ModelManager.tsx  RephrasePanel.tsx  Settings.tsx  diff.ts  main.tsx
windows/app/src-tauri/: Cargo.toml  deny.toml  rust-toolchain.toml  tauri.conf.json
windows/app/src-tauri/capabilities/: default.json
windows/app/src-tauri/src/: analytics.rs  clipboard.rs  context.rs  hotkey.rs  inference.rs  lib.rs  main.rs  models.rs  panel.rs  settings.rs
windows/poc/: Cargo.toml
windows/poc/src/: main.rs
