[package]
name = "rephraser"
version = "0.1.0"
description = "Rephraser — free, private, on-device AI text rewriter"
authors = ["Srivatsan Raghavan"]
edition = "2021"
license = "MIT"

[lib]
name = "rephraser_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
tauri-plugin-log = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"

# Phase 2: global hotkey + text capture
global-hotkey = "0.6"
arboard = "3.4"
enigo = "0.2"

# Phase 3: on-device inference (llama.cpp via llama-cpp-2)
llama-cpp-2 = "0.1.143"
hf-hub = { version = "0.3", default-features = false, features = ["tokio", "online"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "fs"] }
once_cell = "1"

# Phase 5: model download
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
futures-util = "0.3"

# Phase 6: settings + analytics
sha2 = "0.10"
getrandom = "0.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_Storage_FileSystem",
] }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
panic = "abort"
